# yesudo

./: .ghci  .gitignore  flake.nix  supercede-auth.cabal
messages/: en.msg
src/: Dev.hs  Main.hs  StaticFiles.hs
src/Supercede/: Auth.hs
src/Supercede/Auth/: Data.hs
static/css/: buttons.css  skeleton.css
templates/: layout.lucius  login.hamlet  login.julius  login.lucius
